@@ -1,3 +1,6 @@
+2011-06-20 Dominic Simm <dominic.simm@sub.uni-goettingen.de>
+	* Einbinden der Javascripts für JK-Navigation
+
 2011-06-20 Ingo Pfennigstorf <pfennigstorf@sub.uni-goettingen.de>
 	* Anpassung an statische Aufrufe der Methoden
 
@@ -22,7 +25,7 @@
 	* Fix:  WWW-467 Anzeige von Unterseiten in der Infobox, obwohl diese auf "exclude from menu" gesetzt sind
 
 2010-11-25 - 0.0.42 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
-    * Fix: WWW-448 Anzeige von Seitenelementen nur aus der Hauptspalte in Infobox (Inhalte dieser Seite)
+        * Fix: WWW-448 Anzeige von Seitenelementen nur aus der Hauptspalte in Infobox (Inhalte dieser Seite)
 
 2010-11-23 - 0.0.41 - Nils K. Windisch <windisch@sub.uni-goettingen.de>
 	* run: "UPDATE pages SET tx_nkwsubmenu_showsidebar = '1'"
